--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,15 @@
       <section>
 
       {{ content }}
+      {% if site.disqus_username %}
+      <!-- disqus 评论框 start -->
+      <div class="comment">
+          <div id="disqus_thread" class="disqus-thread">
 
+          </div>
+      </div>
+      <!-- disqus 评论框 end -->
+      {% endif %}
       </section>
       <footer>
         {% if site.github.is_project_page %}
