--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
   </head>
-  <body background="/images/xz.png">
+  <body background="">
+  <style>
+  body{
+    width: 100%;
+    height: 100%;
+    background:url("/images/xz.png") no-repeat;
+    background-size: 100%;
+  }
+  </style>
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
