--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
   body{
     width: 100%;
     height: 100%;
-    background:url("/images/xz.png") no-repeat;
-    background-size: 100%;
+    background:url("/images/xz.png") no-repeat center center;
+    background-size: 100% 100%;
   }
   </style>
     <div class="wrapper">
