--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   <body>
   <style>
   body{
+    width: auto;
     height: 100%;
     background:url("/images/xz.png") no-repeat center center;
     background-size: 100% 100%;
