update background img

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <style>
   body{
     width: auto;
-    height: 100%;
+    height: auto;
     background:url("/images/xz.png") no-repeat center center;
     background-size: 100% 100%;
   }
