--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
   <style>
   body{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     background:url("/images/xz.png") no-repeat center center;
     background-size: 100% 100%;
   }
