--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     background:url("/images/xz.png") no-repeat center center;
-    background-size: 100% 100%;
+    background-size: cover;
   }
   </style>
     <div class="wrapper">
