--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
   <style>
   body{
-    width: 100%;
+    width: auto;
     height: 100%;
     background:url("/images/xz.png") no-repeat center center;
     background-size: cover;
