--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,11 @@
   <body>
   <style>
   body{
-    width: auto;
+    width: 100%;
     height: 100%;
     background:url("/images/xz.png") no-repeat center center;
     background-size: cover;
+    opacity: 0.4;
   }
   </style>
     <div class="wrapper">
