--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
         width: 100%;
         height: 100%;
         background:url("/images/xz.png") no-repeat center center;
-        background-size: cover;
+        background-size: cover 100%;
       }
     </style>
   </head>
-  <body>
+  <body background>
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
