--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,16 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    <style>
-      body{
+    <style type="text/css">
+      .body{
         width: 100%;
         height: 100%;
         background:url("/images/xz.png") no-repeat center center;
-        background-size: cover 100%;
+        background-size: cover;
       }
     </style>
   </head>
-  <body background>
+  <body class="body">
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
