--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <style type="text/css">
       .body{
         margin: 0;
+        width: 100%;
         height: 100%;
         background:url("/images/xz.png") no-repeat center center;
         background-size: cover;
