--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         margin: 0;
         width: 100%;
         height: 100%;
-        background:url("/images/xz.png") no-repeat center center;
+        background:url("/images/yn.png") no-repeat center center;
         background-size: cover;
         background-attachment: fixed;
       }
