--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,16 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    <style type="text/css">
-      .body{
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        background:url("/images/yn.png") no-repeat center center;
-        background-size: cover;
-        background-attachment: fixed;
-      }
-    </style>
+<!--    <style type="text/css">-->
+<!--      .body{-->
+<!--        margin: 0;-->
+<!--        width: 100%;-->
+<!--        height: 100%;-->
+<!--        background:url("/images/yn.png") no-repeat center center;-->
+<!--        background-size: cover;-->
+<!--        background-attachment: fixed;-->
+<!--      }-->
+<!--    </style>-->
   </head>
   <body class="body">
     <div class="wrapper">
